--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tgwf/co2": "^0.12.2",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
